improved-logout-logic (#203)
